--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^6.2.1
   glassmorphism_ui: ^0.3.0
   uicons_pro: ^1.1.0
+  svg_flutter: ^0.0.1
+  svgator_player_flutter: ^2.0.0
+  webview_flutter: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/svgs/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
