--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   svg_flutter: ^0.0.1
   svgator_player_flutter: ^2.0.0
   webview_flutter: ^3.0.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
