--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   svgator_player_flutter: ^2.0.0
   webview_flutter: ^3.0.1
   percent_indicator: ^4.2.3
+  http: ^1.2.2
+  get_it: ^8.0.3
+  equatable: ^2.0.7
+  fpdart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
